<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutDisabledMessage="@string/generate_shortcut_disable_message"
        android:shortcutId="main"
        android:shortcutLongLabel="@string/generate_shortcut_long_label"
        android:shortcutShortLabel="@string/generate_shortcut_short_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.poorskill.poorpassword.MainActivity"
            android:targetPackage="com.poorskill.poorpassword" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>


    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutDisabledMessage="@string/generate_shortcut_disable_message"
        android:shortcutId="settings"
        android:shortcutLongLabel="@string/settings_shortcut_long_label"
        android:shortcutShortLabel="@string/settings_shortcut_short_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.poorskill.poorpassword.SettingsActivity"
            android:targetPackage="com.poorskill.poorpassword" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>